# tau

./: .gitignore  Cargo.toml  PLAN.md  README.md  flake.nix  result
.claude/: settings.local.json
cli/: Cargo.toml
cli/src/: allowlist.rs  audit.rs  honeypot.rs  main.rs  mcp_config.rs  mgmt.rs  paths.rs  proxy.rs  util.rs
cli/src/cmd/: ctl.rs  jail.rs  mod.rs  open.rs  serve.rs
cli/tests/: integration.rs
extension/: index.ts  package.json  pnpm-lock.yaml
nix/: extension.nix  home-manager.nix  nixos.nix  pi.nix  systemd-unit.nix  tau.nix
src/: allowlist.rs  main.rs  mgmt.rs  proxy.rs
src/cmd/: ctl.rs  jail.rs  serve.rs
tests/: integration.rs
